--- a/style.css
+++ b/style.css
@@ -9,13 +9,34 @@
     overflow-x: hidden;
     
 }
+html{
+    scroll-behavior: smooth;
+}
 body{
     background-image: url(./img/bg2.png);
     background-size:cover;
     
 
 }
-
+.homePassive{
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    font-size: 18px;
+    outline: none;
+    justify-content: center;
+    border-radius: 5px;
+    box-shadow: 0 0 14px rgba(0, 0, 0, 0.3);
+    border-color: rgb(58, 96, 191);
+    background: none;
+    color: white;
+    width: 10%;
+    height: 5%;
+    font-family: 'Work Sans', sans-serif;
+    font-size: 1.2rem;
+    overflow: hidden;
+}
 
 /* barre de navigation */
 header{
@@ -23,9 +44,13 @@ header{
     height: fit-content;
     position: fixed;
     z-index: 2;
+    
+}
+.scrolled{
+    background-color: rgba(255,255,255,0.2);
+
 
 }
-
 main{
     z-index: 1;
 }
@@ -45,12 +70,13 @@ nav ul li{
     color: white;
     cursor: pointer;
 }
+.secFocus{
+    font-weight: bold;
+}
 
 .hoverUnderline {
     display: inline-block;
     vertical-align: middle;
-    /* -webkit-transform: perspective(1px) translateZ(-1); */
-    /* transform: perspective(1px) translateZ(1); */
     box-shadow: 0 0 1px rgba(0, 0, 0, 0);
     position: relative;
     overflow: hidden;
@@ -96,7 +122,14 @@ nav ul li{
     font-size: 2.8rem;
     
 }
-
+.divTitle{
+    height: 20vh;
+    padding-top: 100px;
+    font-weight: 100;
+    color: white;
+    font-family: 'Work Sans', sans-serif;
+    font-size: 1.5rem;
+}
 .centre{
     display: flex;
     text-align: center;
@@ -175,6 +208,7 @@ nav ul li{
     display: flex;
     /* box-shadow: 0 0 14px rgba(0, 0, 0, 0.3); */
     color:rgb(109, 109, 109);
+    overflow: hidden;
     
 }
 
@@ -184,6 +218,7 @@ nav ul li{
     text-align: center;
     font-weight: 800;
     margin-bottom: 20px;
+    
  
 }
 
@@ -205,12 +240,12 @@ main div h1{
 .front{
     width: 40%;
     padding:20px 20px;
-    background-color: rgb(255,255,255);
-    height: 70vh;
+    background-color: rgba(255,255,255,0.1);
+    height: 80vh;
     text-align: center;
     margin-left: 50px;
     margin-right: 50px;  
-    border-radius: 10px;
+    border-radius: 5px;
     overflow: hidden;
     box-shadow: 0 0 14px rgba(0, 0, 0, 0.3);
     
@@ -221,6 +256,7 @@ main div h1{
     font-size: 2.5rem;
     text-align: center;
     font-weight: 800;
+    color: white;
     
 }
 
@@ -245,11 +281,11 @@ main div h1{
 .back{
     width: 40%;
     padding:20px 20px;
-    background-color: rgb(255,255,255);
-    height: 70vh;
+    background-color: rgba(255,255,255,0.1);
+    height: 80vh;
     margin-left: 50px;
     margin-right: 50px;  
-    border-radius: 10px;
+    border-radius: 5px;
     box-shadow: 0 0 14px rgba(0, 0, 0, 0.3);
      
 }
@@ -259,6 +295,7 @@ main div h1{
     font-size: 2.5rem;
     text-align: center;
     font-weight: 800;
+    color: white;
     
 }
 
@@ -284,11 +321,11 @@ main div h1{
 .d{
     width: 40%;
     padding:20px 20px;
-    background-color: rgba(255,255,255);
-    height: 70vh;
+    background-color: rgba(255,255,255,0.1);
+    height: 80vh;
     margin-left: 50px;
     margin-right: 50px;  
-    border-radius: 10px;
+    border-radius: 5px;
     box-shadow: 0 0 14px rgba(0, 0, 0, 0.3);
     
 }
@@ -298,6 +335,7 @@ main div h1{
     font-size: 2.5rem;
     text-align: center;
     font-weight: 800;
+    color: white;
     
 }
 
@@ -334,21 +372,19 @@ main div h1{
 
 .project p{
     font-family: 'Work Sans', sans-serif;
-    font-size: 1rem;
-    font-weight: 800;
+    font-size: 1.1rem;
+    font-weight: 500;
     
 }
 
 .projet1{
     border-radius: 10px;
     width: 35%;
-    height:50vh;
+    height:60vh;
     text-align: center;
     margin-left: 10%;
-    padding:50px;
     margin-bottom: 50px;
     box-shadow: 0 0 14px rgba(0, 0, 0, 0.3);
-    background: rgba(255, 255, 255,);
     transition: 0.3s;
     color: white;
     
@@ -358,11 +394,10 @@ main div h1{
 
 .projet1:hover{
 
-    transform-origin: center;
+    
     transform: scale(1.1);
-    box-shadow: 0 0 14px rgba(0, 0, 0, 0.3);
     transition: 2s;
-    color: white;
+
     
 }
 
@@ -375,7 +410,7 @@ main div h1{
 
 .projet1 img{
     
-    width: 55%;
+    width: 100%;
     margin-bottom: 10px;
     
 }
@@ -394,7 +429,117 @@ main div h1{
 
 
 .contact{
-    height: 100vh;
-    background: rgb(1, 54, 98);
-    background: linear-gradient(180deg, rgba(0, 140, 255, 0.5) 0%, rgba(0,142,255,0.5) 100%);
+    height: fit-content;
+    overflow: hidden;
+    padding: 30px;
+    
+}
+
+.formulaire{
+    width: 60%;
+    padding:20px 20px;
+    
+    height: fit-content;
+    text-align: center;
+    margin: auto; 
+    vertical-align: middle;
+    border-radius: 5px;
+    overflow: hidden;
+    
+    font-family: 'Work Sans', sans-serif;
+    
+}
+.formulaire label{
+    width: 80%;
+    display: flex;
+    color: white;
+    font-size: 1.2rem;
+    font-weight: 400;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: auto; 
+    margin-bottom: 10px;
+    
+    
+}
+.formulaire input{
+    text-align: center;
+    display: flex;
+    color: white;
+    font-size: 1.2rem;
+    font-weight: 400;
+    border-radius: 5px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 20px;  
+    
+}
+
+.formulaire input:focus{
+    color: white;
+    outline: none;
+    background-color: rgba(255,255,255,0.1);
+}
+.formulaire fieldset{
+    box-shadow: 0 0 14px rgba(0, 0, 0, 0.3);
+    padding: 10px;
+    border-color: rgb(58, 96, 191);
+    height: fit-content;
+    margin-bottom: 20px;
+    overflow: hidden;
+}
+.textearea{
+    width:70%;
+    border-radius: 5px;
+    box-shadow: 0 0 14px rgba(0, 0, 0, 0.3);
+    border-color: rgb(58, 96, 191);
+    background: none;
+    resize: none;
+    color: white;
+    font-size: 1.1rem;
+    font-weight: 300;
+    font-family: 'Work Sans', sans-serif;
+    margin-bottom: 20px;
+    padding: 20px;
+    
+}
+.textearea:focus{
+    color: white;
+    outline: none;
+    background-color: rgba(255,255,255,0.1);
+}
+
+.user_name{
+    border-radius: 5px;
+    box-shadow: 0 0 14px rgba(0, 0, 0, 0.3);
+    border-color: rgb(58, 96, 191);
+    background: none;
+}
+
+.formulaire legend{
+    color: white;
+    font-size: 3rem;
+    font-weight: 600;
+    padding: 50px;
+    
+}
+.labels {
+    
+    justify-content: space-around;
+}
+.label1,.label2{
+    margin: 20px;
+}
+
+.button{
+    justify-content: center;
+    border-radius: 5px;
+    box-shadow: 0 0 14px rgba(0, 0, 0, 0.3);
+    border-color: rgb(58, 96, 191);
+    background: none;
+    color: white;
+    width: 10%;
+    height: 10%;
+    font-family: 'Work Sans', sans-serif;
+    font-size: 1.2rem;
 }
