--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ header{
     
 }
 .scrolled{
-    background-color: rgba(255,255,255,0.2);
+    background-color: rgba(0, 24, 65, 0.3);
 
 
 }
@@ -63,15 +63,21 @@ nav ul{
     
     
 }
-nav ul li{
+nav ul a{
     font-size: 1.5rem;
     font-family: 'Work Sans', sans-serif;
     margin-right: 109px;
     color: white;
     cursor: pointer;
+    text-decoration: none;
+    transition: 0.3s;
 }
 .secFocus{
-    font-weight: bold;
+    font-size: 1.6rem;
+    cursor: default;
+    pointer-events: none;
+    text-shadow: 4px 4px 4px rgba(255, 255, 255,0.5);
+    transition: 0.3s;
 }
 
 .hoverUnderline {
