--- a/style.css
+++ b/style.css
@@ -11,32 +11,17 @@
 }
 html{
     scroll-behavior: smooth;
-}
-body{
     background-image: url(./img/bg2.png);
-    background-size:cover;
     
+    
+    
+    width: fit-content;
+}
 
+h1{
+    font-weight: 600;
 }
-.homePassive{
-    position: fixed;
-    bottom: 20px;
-    right: 30px;
-    z-index: 99;
-    font-size: 18px;
-    outline: none;
-    justify-content: center;
-    border-radius: 5px;
-    box-shadow: 0 0 14px rgba(0, 0, 0, 0.3);
-    border-color: rgb(58, 96, 191);
-    background: none;
-    color: white;
-    width: 10%;
-    height: 5%;
-    font-family: 'Work Sans', sans-serif;
-    font-size: 1.2rem;
-    overflow: hidden;
-}
+
 
 /* barre de navigation */
 header{
@@ -46,6 +31,7 @@ header{
     z-index: 2;
     
 }
+
 .scrolled{
     background-color: rgba(23, 45, 82, 0.7);
 
@@ -71,13 +57,15 @@ nav ul a{
     cursor: pointer;
     text-decoration: none;
     transition: 0.3s;
+    font-weight: 300;
 }
 .secFocus{
-    font-size: 1.6rem;
+    
     cursor: default;
     pointer-events: none;
     text-shadow: 4px 4px 4px rgba(255, 255, 255,0.5);
     transition: 0.3s;
+    font-weight: 400;
 }
 
 button{
@@ -113,7 +101,7 @@ a{
     right: 51%;
     bottom: 0;
     background: white;
-    height: 2px;
+    height: 1px;
     -webkit-transition-property: left, right;
     transition-property: left, right;
     -webkit-transition-duration: 0.1s;
@@ -134,6 +122,7 @@ a{
     height:90vh;
     width: 100vw;
     color:rgb(80, 80, 80);
+    margin-top: 100px;
 
 }
 
@@ -166,6 +155,7 @@ a{
 .presentationcont{
     width: 50%;
     text-align: left;
+    
     
 }
 
@@ -202,6 +192,7 @@ a{
     font-family: 'Work Sans', sans-serif;
     color: white;
     margin: auto;
+    font-weight: 400;
 }
 
 .apcont h1{
@@ -216,7 +207,7 @@ a{
 .citation{
     margin-top: 100px;
     font-size: 2rem;
-    font-weight: 500;
+    font-weight: 400;
     font-style: italic;
     color: rgb(100, 178, 250);
 }
@@ -273,6 +264,7 @@ main div h1{
     border-radius: 5px;
     overflow: hidden;
     box-shadow: 0 0 14px rgba(0, 0, 0, 0.3);
+    font-weight: 400;
     
 }
 
@@ -280,7 +272,7 @@ main div h1{
     font-family: 'Work Sans', sans-serif;
     font-size: 2.5rem;
     text-align: center;
-    font-weight: 800;
+    font-weight: 400;
     color: white;
     
 }
@@ -300,6 +292,7 @@ main div h1{
     font-family: 'Work Sans', sans-serif;
     margin-bottom: 15%;
     color: rgb(100, 178, 250);
+    font-weight: 500;
     
 }
 
@@ -319,7 +312,7 @@ main div h1{
     font-family: 'Work Sans', sans-serif;
     font-size: 2.5rem;
     text-align: center;
-    font-weight: 800;
+    font-weight: 400;
     color: white;
     
 }
@@ -340,6 +333,7 @@ main div h1{
     font-family: 'Work Sans', sans-serif;
     margin-bottom: 15%;
     color: rgb(100, 178, 250);
+    font-weight: 500;
     
 }
 
@@ -359,7 +353,7 @@ main div h1{
     font-family: 'Work Sans', sans-serif;
     font-size: 2.5rem;
     text-align: center;
-    font-weight: 800;
+    font-weight: 400;
     color: white;
     
 }
@@ -381,6 +375,7 @@ main div h1{
     font-family: 'Work Sans', sans-serif;
     margin-bottom: 15%;
     color: rgb(100, 178, 250);
+    font-weight: 500;
 
 }
 
@@ -398,7 +393,7 @@ main div h1{
 .project p{
     font-family: 'Work Sans', sans-serif;
     font-size: 1.1rem;
-    font-weight: 500;
+    font-weight: 400;
     
 }
 
@@ -416,6 +411,11 @@ main div h1{
     
     
 }
+.projet1:hover{
+    background-color: rgba(53, 70, 105, 0.672);
+    transition: 3s;
+    
+}
 .link{
     width:100%;
     position:absolute;
@@ -423,20 +423,23 @@ main div h1{
     bottom:10px;
     right: auto;
     left:auto;
+    
 
 }
 .link a img{
-    width:13%;
+    width:17%;
     margin-inline: 50px;
-    
+    opacity:0;
+    pointer-events: none;
     
 }
-.link a img:hover::after{
-    content: attr(data-tooltip);
+
+.projet1:hover .link a img{
+    opacity: 1;
+    transition: 0.3s;
+    pointer-events: all;
+    
 }
-
-
-
 
 .projet1:hover{
 
@@ -484,7 +487,7 @@ main div h1{
 .formulaire{
     width: 60%;
     padding:20px 20px;
-    height: fit-content;
+    height: 60vh;
     text-align: center;
     margin: auto; 
     vertical-align: middle;
@@ -494,97 +497,11 @@ main div h1{
     font-family: 'Work Sans', sans-serif;
     
 }
-.formulaire label{
-    width: 80%;
-    display: flex;
-    color: white;
-    font-size: 1.2rem;
-    font-weight: 400;
-    justify-content: center;
-    margin-left: auto;
-    margin-right: auto; 
-    margin-bottom: 10px;
-    
-    
+.formulaire a img{
+    width: 15%;
+    margin-inline: 50px;
 }
-.formulaire input{
-    text-align: center;
-    display: flex;
-    color: white;
-    font-size: 1.2rem;
-    font-weight: 400;
-    border-radius: 5px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 20px;  
-    
-}
-
-.formulaire input:focus{
-    color: white;
-    outline: none;
-    background-color: rgba(255,255,255,0.1);
-}
-.formulaire fieldset{
-    box-shadow: 0 0 14px rgba(0, 0, 0, 0.3);
-    padding: 10px;
-    border-color: rgb(58, 96, 191);
-    height: fit-content;
-    margin-bottom: 20px;
-    overflow: hidden;
-}
-.textearea{
-    width:70%;
-    border-radius: 5px;
-    box-shadow: 0 0 14px rgba(0, 0, 0, 0.3);
-    border-color: rgb(58, 96, 191);
-    background: none;
-    resize: none;
-    color: white;
-    font-size: 1.1rem;
-    font-weight: 300;
-    font-family: 'Work Sans', sans-serif;
-    margin-bottom: 20px;
-    padding: 20px;
-    
-}
-.textearea:focus{
-    color: white;
-    outline: none;
-    background-color: rgba(255,255,255,0.1);
-}
-
-.user_name{
-    border-radius: 5px;
-    box-shadow: 0 0 14px rgba(0, 0, 0, 0.3);
-    border-color: rgb(58, 96, 191);
-    background: none;
-}
-
-.formulaire legend{
-    color: white;
-    font-size: 3rem;
-    font-weight: 600;
-    padding: 50px;
-    
-}
-.labels {
-    
-    justify-content: space-around;
-}
-.label1,.label2{
-    margin: 20px;
-}
-
-.button{
-    justify-content: center;
-    border-radius: 5px;
-    box-shadow: 0 0 14px rgba(0, 0, 0, 0.3);
-    border-color: rgb(58, 96, 191);
-    background: none;
-    color: white;
-    width: 10%;
-    height: 10%;
-    font-family: 'Work Sans', sans-serif;
-    font-size: 1.2rem;
+.formulaire img:hover{
+    cursor: pointer;
+    transform: scale(1.1);
 }
