--- a/mobile.css
+++ b/mobile.css
@@ -12,7 +12,7 @@
     
     }
     .presentation{
-        height: fit-content;
+        height: 100vh;
         width: 100%;
     }
     .presentationcont{
@@ -25,7 +25,7 @@
 
     .presentation img {
 
-        width:30%;
+        width:40%;
         /* vertical-align: middle; */
         text-align: center;
         margin-left: auto;
@@ -33,15 +33,25 @@
         
          
     }
+    .line1{
+        color: rgb(100, 178, 250);
+        font-size: 2rem;
+    
+    }
 
     .titre {
         font-size: 1.5rem;
         text-align: center;
         margin-left: auto;
         margin-right: auto;
+        margin-top: auto;
+        margin-bottom: auto;
+        height: 100vh;
         
     }
-
+    .apropos{
+        width: 100%;
+    }
     .apcont h1{
         font-size: 2rem;
         margin-bottom: 40px;
