--- a/style.css
+++ b/style.css
@@ -515,7 +515,7 @@ main div h1{
     
 }
 .mail input{
-    width: 10vw;
+    width: 15vw;
     height: 3vh;
     resize: none;
     background: none;
@@ -525,6 +525,7 @@ main div h1{
     font-family: 'Work Sans', sans-serif;
     font-size: 1.2rem;
     padding:10px;
+    text-align: center;
 
 }
 .mail input:focus{
