--- a/style.css
+++ b/style.css
@@ -38,13 +38,14 @@ header{
     position: fixed;
     z-index: 2;
     
+    
 }
 
 .scrolled{
     background-color: rgba(6, 20, 41, 0.7);
 
-
 }
+
 main{
     z-index: 1;
 }
@@ -53,9 +54,8 @@ nav ul{
     display: flex;
     justify-content: right;
     margin: 20px 0;
-    
-    
-    
+    overflow: hidden;
+     
 }
 nav ul a{
     font-size: 1.5rem;
