--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ a{
     right: 51%;
     bottom: 0;
     background: white;
-    height: 1px;
+    height: 2px;
     -webkit-transition-property: left, right;
     transition-property: left, right;
     -webkit-transition-duration: 0.1s;
@@ -214,13 +214,23 @@ a{
 }
 
 /* Div compétences */
+#competences{
+    display:flex;
+    justify-content: center;
+    
+    
+}
 
 .competence{
-    height: 100vh;
+    height: fit-content;
+    width:100%;
     display: flex;
-    /* box-shadow: 0 0 14px rgba(0, 0, 0, 0.3); */
+    margin-left:100px;
+    margin-right:100px;
+    flex-wrap:wrap;
     color:rgb(109, 109, 109);
     overflow: hidden;
+    
     
 }
 
@@ -255,8 +265,8 @@ main div h1{
     background-color: rgba(255,255,255,0.1);
     height: 80vh;
     text-align: center;
-    margin-left: 50px;
-    margin-right: 50px;  
+    margin-left: 100px;
+    margin-right: 100px;  
     border-radius: 5px;
     overflow: hidden;
     box-shadow: 0 0 14px rgba(0, 0, 0, 0.3);
